# SaveServer-ESP

./: CMakeLists - Kopie.txt  CMakeLists.txt  README.md  README2.md
ESP_Save_client/: platformio.ini
ESP_Save_client/include/: config.h  crypto_helpers.h  http_client.h  ota_client.h  sensors.h  time_sync.h
ESP_Save_client/src/: http_client.cpp  main.cpp
src/: main.cpp
src/Tools/: jwtgen.cpp  jwtgen.h
src/common/: crypto_helpers.h
src/db/: Storage.cpp  Storage.h
src/http/: HttpConnection.cpp  HttpConnection.h  HttpsServer.cpp  HttpsServer.h  hmacauth.cpp  hmacauth.h  jwt.cpp  jwt.h  wsconnection.cpp  wsconnection.h  wsserver.cpp  wsserver.h
src/modbus/: modbusserver.cpp  modbusserver.h
src/mqtt/: mqttclient.cpp  mqttclient.h
src/ui/: MainWindow.cpp  MainWindow.h
web/: index - Kopie (2).html  index - Kopie.html  index.html
